Updated meta image source

--- a/client/index.html
+++ b/client/index.html
@@ -17,7 +17,9 @@
     <meta
       property="og:description"
       content="Where social film enthusiasts can to network with other film fans with similar taste." />
-    <meta property="og:image" content="localhost:5173/MatchBoxd_thumb.png" />
+    <meta
+      property="og:image"
+      content="http://matchboxd-dev.us-west-1.elasticbeanstalk.com/assets/MatchBoxd_thumb.png" />
   </head>
   <body>
     <div id="root"></div>
