--- a/client/index.html
+++ b/client/index.html
@@ -18,6 +18,9 @@
       property="og:description"
       content="Where social film enthusiasts can to network with other film fans with similar taste." />
     <meta
+      property="og:url"
+      content="http://matchboxd-dev.us-west-1.elasticbeanstalk.com" />
+    <meta
       property="og:image"
       content="http://matchboxd-dev.us-west-1.elasticbeanstalk.com/images/MatchBoxd_thumb_680x680.jpg" />
   </head>
